--- a/produtos.html
+++ b/produtos.html
@@ -1,53 +1,37 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 	<head>
 		<meta charset="UTF-8">
-		<title>Produtos - Barbearia Alura</title>
-
-		<link rel="stylesheet" href="reset.css">
-		<link rel="stylesheet" href="produtos.css">
+		<title>Sauer Car</title>
+		<link rel="stylesheet" href="style.css">
 	</head>
+
 	<body>
 		<header>
-			<div class="caixa">
-				<h1><img src="logo.png"></h1>
-
-				<nav>
-					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="produtos.html">Produtos</a></li>
-						<li><a href="contato.html">Contato</a></li>
-					</ul>
-				</nav>
-			</div>
+			<h1 class="titulo-principal">mecanica Sauer Car</h1>
+				
 		</header>
+		<img id="banner" src="banner.jpg">
+		<div class="principal">
+			<h2 class="titulo-centralizado">sobre nosso serviço</h2>
+	 
+			<p>localizado em Radiator Spring <strong>Sauer Car</strong> Consertamos,pintamos,trocamos,vendemos sua caranga com um preço em conta aceitamos pix e cartão parcelamos até 12x
+			<p id="missao"><em>Nossa missão é: <strong>"arrumar seu carro e personalizar do seu gosto"</strong>.</em></p>
 
-		<main>
-			<ul class="produtos">
-				<li>
-					<h2>Cabelo</h2>
-					<img src="cabelo.jpg">
-					<p class="produto-descricao">Na tesoura ou máquina, como o cliente preferir</p>
-					<p class="produto-preco">R$ 25,00</p>
-				</li>
-				<li>
-					<h2>Barba</h2>
-					<img src="barba.jpg">
-					<p class="produto-descricao">Corte e desenho profissional de barba</p>
-					<p class="produto-preco">R$ 18,00</p>
-				</li>
-				<li>
-					<h2>Cabelo + Barba</h2>
-					<img src="cabelo+barba.jpg">
-					<p class="produto-descricao">Pacote completo de cabelo e barba</p>
-					<p class="produto-preco">R$ 35,00</p>
-				</li>
+			<p>Oferecemos profissionais experientes e antenados às mudanças no mundo automotivo. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+		</div>
+
+		<div class="beneficios">
+			<h3 class="titulo-centralizado">Benefícios</h3>
+
+			<ul>
+				<li class="itens">Atendimento aos Clientes</li>
+				<li class="itens">Bar privado</li>
+				<li class="itens">Localização</li>
+				<li class="itens">Profissionais Qualificados</li>
 			</ul>
-		</main>
 
-		<footer>
-			<img src="logo-branco.png">
-			<p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
-		</footer>
+			<img src="beneficios.jpg" class="imagembeneficios">
+		</div>
 	</body>
 </html>
