--- a/produtos.html
+++ b/produtos.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Produtos - Barbearia Alura</title>
+		<title>Sauer Car</title>
 
 		<link rel="stylesheet" href="reset.css">
 		<link rel="stylesheet" href="produtos.css">
@@ -25,19 +25,19 @@
 		<main>
 			<ul class="produtos">
 				<li>
-					<h2>Cabelo</h2>
-					<img src="cabelo.jpg">
-					<p class="produto-descricao">Na tesoura ou máquina, como o cliente preferir</p>
-					<p class="produto-preco">R$ 25,00</p>
+					<h2>PNEUS</h2>
+					<img src="pneu.png">
+					<p class="produto-descricao">Na hora, qualquer marca</p>
+					<p class="produto-preco">R$350,00</p>
 				</li>
 				<li>
-					<h2>Barba</h2>
-					<img src="barba.jpg">
-					<p class="produto-descricao">Corte e desenho profissional de barba</p>
-					<p class="produto-preco">R$ 18,00</p>
+					<h2>Pintura</h2>
+					<img src="tinta.png">
+					<p class="produto-descricao">Qualquer marca e qualquer cor</p>
+					<p class="produto-preco">R$600,00</p>
 				</li>
 				<li>
-					<h2>Cabelo + Barba</h2>
+					<h2></h2>
 					<img src="cabelo+barba.jpg">
 					<p class="produto-descricao">Pacote completo de cabelo e barba</p>
 					<p class="produto-preco">R$ 35,00</p>
