--- a/produtos.html
+++ b/produtos.html
@@ -38,16 +38,16 @@
 				</li>
 				<li>
 					<h2></h2>
-					<img src="cabelo+barba.jpg">
-					<p class="produto-descricao">Pacote completo de cabelo e barba</p>
-					<p class="produto-preco">R$ 35,00</p>
+					<img src="consertar.png">
+					<p class="produto-descricao">trocamos oléo,peças</p>
+					<p class="produto-preco">R$ 100 a 500</p>
 				</li>
 			</ul>
 		</main>
 
 		<footer>
 			<img src="logo-branco.png">
-			<p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
+			<p class="copyright">&copy; Copyright Sauer car- 2023</p>
 		</footer>
 	</body>
 </html>
