--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 			<h1 class="titulo-principal">mecanica Sauer Car</h1>
 				
 		</header>
-		<img id="banner" src="banner.jpg">
+		<img id="banner" src="SauerCar.png">
 		<div class="principal">
 			<h2 class="titulo-centralizado">sobre nosso serviço</h2>
 	 
-			<p>localizado em Radiator Spring <strong>Sauer Car</strong> Consertamos,pintamos,trocamos,vendemos sua caranga com um preço em conta aceitamos pix e cartão parcelamos até 12x
+			<p>localizado em Radiator Spring <strong>Sauer Car</strong> Consertamos,pintamos,trocamos sua caranga com um preço em conta aceitamos pix e cartão parcelamos até 12x
 			<p id="missao"><em>Nossa missão é: <strong>"arrumar seu carro e personalizar do seu gosto"</strong>.</em></p>
 
 			<p>Oferecemos profissionais experientes e antenados às mudanças no mundo automotivo. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
