--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<div class="principal">
 			<h2 class="titulo-centralizado">sobre nosso serviço</h2>
 	 
-			<p>localizado em Radiator Spring <strong>Sauer Car</strong> Consertamos,pintamos,trocamos sua caranga com um preço em conta aceitamos pix e cartão parcelamos até 12x
+			<p>localizado em Radiator Spring <strong>Sauer Car</strong> Consertamos,pintamos,trocamos paças da  sua caranga com um preço em conta aceitamos pix e cartão parcelamos até 12x
 			<p id="missao"><em>Nossa missão é: <strong>"arrumar seu carro e personalizar do seu gosto"</strong>.</em></p>
 
 			<p>Oferecemos profissionais experientes e antenados às mudanças no mundo automotivo. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
