--- a/contato.html
+++ b/contato.html
@@ -61,7 +61,7 @@
 		</main>
 
 		<footer>
-			<img src="logo-branco.png" alt="Logo da Barbearia Alura">
+			<img src="logo-branco.png" alt="Logo Sauer Car">
 			<p class="copyright">&copy; Copyright Sauer Car - 2023</p>
 		</footer>
 	</body>
