--- a/contato.html
+++ b/contato.html
@@ -24,17 +24,17 @@
 
 		<main>
 			<form>
-				<label for="nomesobrenome">Nome e sobrenome</label>
-				<input type="text" id="nomesobrenome" class="input-padrao" required>
+				<p><label for="nomesobrenome">Nome e sobrenome</label></p>
+				<p><input type="text" id="nomesobrenome" class="input-padrao" required></p>
 
-				<label for="email">Email</label>
-				<input type="email" id="email" class="input-padrao" required placeholder="seuemail@dominio.com">
+				<p><label for="email">Email</label></p>
+				<p><input type="email" id="email" class="input-padrao" required placeholder="seuemail@dominio.com"></p>
 
-				<label for="telefone">Telefone</label>
-				<input type="tel" id="telefone" class="input-padrao" required placeholder="(XX) XXXXX-XXXX">
+				<p><label for="telefone">Telefone</label></p>
+				<p><input type="tel" id="telefone" class="input-padrao" required placeholder="(XX) XXXXX-XXXX"></p>
 
-				<label for="mensagem">Mensagem</label>
-				<textarea cols="70" rows="10" id="mensagem" class="input-padrao" required></textarea>
+				<p><label for="mensagem">Mensagem</label></p>
+				<p><textarea cols="70" rows="10" id="mensagem" class="input-padrao" required></textarea></p>
 
 				<fieldset>
 					<legend>Como prefere o nosso contato?</legend>
@@ -62,7 +62,7 @@
 
 		<footer>
 			<img src="logo-branco.png" alt="Logo da Barbearia Alura">
-			<p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
+			<p class="copyright">&copy; Copyright Sauer Car - 2023</p>
 		</footer>
 	</body>
 </html>
