--- a/produtos.html
+++ b/produtos.html
@@ -46,7 +46,7 @@
 		</main>
 
 		<footer>
-			<img src="logo-branco.png">
+			<img src="SauerCar2.png">
 			<p class="copyright">&copy; Copyright Sauer car- 2023</p>
 		</footer>
 	</body>
