--- a/index.html
+++ b/index.html
@@ -1,37 +1,48 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-	<head>
-		<meta charset="UTF-8">
-		<title>Sauer Car</title>
-		<link rel="stylesheet" href="style.css">
-	</head>
 
-	<body>
-		<header>
-			<h1 class="titulo-principal">mecanica Sauer Car</h1>
-				
-		</header>
-		<img id="banner" src="SauerCar.png">
-		<div class="principal">
-			<h2 class="titulo-centralizado">sobre nosso serviço</h2>
-	 
-			<p>localizado em Radiator Spring <strong>Sauer Car</strong> Consertamos,pintamos,trocamos paças da  sua caranga com um preço em conta aceitamos pix e cartão parcelamos até 12x
-			<p id="missao"><em>Nossa missão é: <strong>"arrumar seu carro e personalizar do seu gosto"</strong>.</em></p>
+<head>
+	<meta charset="UTF-8">
+	<title>Sauer Car</title>
+	<link rel="stylesheet" href="style.css">
+</head>
 
-			<p>Oferecemos profissionais experientes e antenados às mudanças no mundo automotivo. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
-		</div>
+<body>
+	<header>
+		<h1 class="titulo-principal">Mecanica Sauer Car</h1>
+		<nav>
+			<ul class="links">
+				<li><a href="index.html">Home</a></li>
+				<li><a href="produtos.html">Produtos</a></li>
+				<li><a href="contato.html">Contato</a></li>
+		</nav>
+	</header>
+	<img id="banner" src="SauerCar.png">
+	<div class="principal">
+		<h2 class="titulo-centralizado">sobre nosso serviço</h2>
 
-		<div class="beneficios">
-			<h3 class="titulo-centralizado">Benefícios</h3>
+		<p>localizado Rua Goiânia-SP <strong>Sauer Car</strong> Consertamos,pintamos,trocamos paças da sua caranga
+			com um preço em conta aceitamos pix e cartão parcelamos até 12x
+		<p id="missao"><em>Nossa missão é: <strong>"arrumar seu carro e personalizar do seu gosto"</strong>.</em></p>
 
-			<ul>
-				<li class="itens">Atendimento aos Clientes</li>
-				<li class="itens">Bar privado</li>
-				<li class="itens">Localização</li>
-				<li class="itens">Profissionais Qualificados</li>
-			</ul>
+		<p>Oferecemos profissionais experientes e antenados às mudanças no mundo automotivo. O atendimento possui padrão
+			de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+	</div>
+	<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7302.488830701955!2d-46.591439430687366!3d-23.774309258795196!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce40ccf0682891%3A0xa01b1c9583a999e5!2sSauer%20Car%20Center!5e0!3m2!1spt-BR!2sbr!4v1692151986280!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+	<div class="beneficios">
+		<iframe width="853" height="480" src="https://www.youtube.com/embed/Vec58eorkU0" title="O poder nas suas mãos! Loja do Mecânico." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+		<h3 class="titulo-centralizado">Benefícios</h3>
 
-			<img src="carros2.png" class="imagembeneficios">
-		</div>
-	</body>
+		<ul>
+			<li class="itens">Atendimento aos Clientes</li>
+			<li class="itens">Bar privado</li>
+			<li class="itens">Localização</li>
+			<li class="itens">Profissionais Qualificados</li>
+		</ul>
+
+		<img src="carros2.png" class="imagembeneficios">
+	</div>
+</body>
+
 </html>
+			
