--- a/produtos.html
+++ b/produtos.html
@@ -10,7 +10,7 @@
 	<body>
 		<header>
 			<div class="caixa">
-				<h1><img src="logo.png"></h1>
+				<h1><img src="Sauer Car2.png"></h1>
 
 				<nav>
 					<ul>
@@ -26,18 +26,21 @@
 			<ul class="produtos">
 				<li>
 					<h2>PNEUS</h2>
-					<img src="pneu.png">
+					<a href="https://www.lojadomecanico.com.br/busca?q=pneu">Compra produto</a>
+					<img src="pneu.png">					
 					<p class="produto-descricao">Na hora, qualquer marca</p>
 					<p class="produto-preco">R$350,00</p>
 				</li>
 				<li>
 					<h2>Pintura</h2>
-					<img src="tinta.png">
+					<a href="https://www.lojadomecanico.com.br/busca?q=tinta">Compra produto</a>					
+					<img src="tinta.png">					
 					<p class="produto-descricao">Qualquer marca e qualquer cor</p>
 					<p class="produto-preco">R$600,00</p>
 				</li>
 				<li>
 					<h2>consertar</h2>
+					<a href="https://www.lojadomecanico.com.br/busca?q=peças+de+carro&page=2">Compra produto</a>
 					<img src="consertar.png">
 					<p class="produto-descricao">trocamos oléo,peças</p>
 					<p class="produto-preco">R$ 100 a 500</p>
@@ -46,8 +49,12 @@
 		</main>
 
 		<footer>
-			<img src="SauerCar2.png">
+			<img src="Sauerlogo.png">
 			<p class="copyright">&copy; Copyright Sauer car- 2023</p>
 		</footer>
 	</body>
 </html>
+
+
+		
+		
