--- a/contato.html
+++ b/contato.html
@@ -16,7 +16,7 @@
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="produtos.html">Produtos</a></li>
-						<li><a href="contato.html">Contato</a></li>
+						<li><a href="https://github.com/cauasauer">Contato</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -28,7 +28,7 @@
 				<p><input type="text" id="nomesobrenome" class="input-padrao" required></p>
 
 				<p><label for="email">Email</label></p>
-				<p><input type="email" id="email" class="input-padrao" required placeholder="seuemail@dominio.com"></p>
+				<p><input type="email" id="email" class="input-padrao" required placeholder="seueremail@dominio.com"></p>
 
 				<p><label for="telefone">Telefone</label></p>
 				<p><input type="tel" id="telefone" class="input-padrao" required placeholder="(XX) XXXXX-XXXX"></p>
@@ -61,8 +61,10 @@
 		</main>
 
 		<footer>
-			<img src="logo-branco.png" alt="Logo da Barbearia Alura">
+			<img src="Sauerlogo.png" alt="Logo da Barbearia Alura">
 			<p class="copyright">&copy; Copyright Sauer Car - 2023</p>
 		</footer>
 	</body>
 </html>
+
+		
