--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
 	<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7302.488830701955!2d-46.591439430687366!3d-23.774309258795196!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce40ccf0682891%3A0xa01b1c9583a999e5!2sSauer%20Car%20Center!5e0!3m2!1spt-BR!2sbr!4v1692151986280!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 	</div>	
 	<div class="beneficios">
+		<div class="video">
 		<iframe width="853" height="480" src="https://www.youtube.com/embed/Vec58eorkU0" title="O poder nas suas mãos! Loja do Mecânico." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+		</div>
 		<h3 class="titulo-centralizado">Benefícios</h3>
 
 		<ul>
